next navbar step

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="main-header">
         <div>
-            <a href="index.html">
+            <a href="index.html" class="main-header__brand">
                 uHost
             </a>
         </div>
@@ -24,20 +24,20 @@
                 <li class="main-nav__item">
                     <a href="packages/index.html">Packages</a>
                 </li>
-                <li>
+                <li class="main-nav__item">
                     <a href="customers/index.html">Customers</a>
                 </li>
-                <li>
+                <li class="main-nav__item">
                     <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="product">
+        <section id="product-overview">
             <h1>Get the freedom you deserve.</h1>
         </section>
-        <section id="plan">
+        <section id="plans">
             <h1 class="section-title">choose your plan.</h1>
             <p>make sure you get the most for you</p>
         </section>
