--- a/index.html
+++ b/index.html
@@ -38,10 +38,53 @@
             <h1>Get the freedom you deserve.</h1>
         </section>
         <section id="plans">
-            <h1 class="section-title">choose your plan.</h1>
-            <p>make sure you get the most for you</p>
+            <h1 class="section-title">Choose your plan.</h1>
+            <div>
+                <article class="plan">
+                    <h1 class="plan__title">FREE</h1>
+                    <h2 class="plan__price">$0/month</h2>
+                    <h3>For ambitious projects.</h3>
+                    <ul class="plan__features">
+                        <li class="plan__features">1 Workspace</li>
+                        <li class="plan__features">Unlimited Traffic</li>
+                        <li class="plan__features">10GB Storage</li>
+                        <li class="plan__features">Basic Support</li>
+                    </ul>
+                    <div>
+                        <button class="button">CHOOSE PLAN</button>
+                    </div>
+                </article>
+                <article class="plan plan--highlighted">
+                    <h1 class="plan__annotation">RECOMMENDED</h1>
+                    <h1 class="plan__title">PLUS</h1>
+                    <h2 class="plan__price">$29/month</h2>
+                    <h3>For ambitious projects.</h3>
+                    <ul class="plan__features">
+                        <li class="plan__features">5 Workspaces</li>
+                        <li class="plan__features">Unlimited Traffic</li>
+                        <li class="plan__features">100GB Storage</li>
+                        <li class="plan__features">Plus Support</li>
+                    </ul>
+                    <div>
+                        <button class="button">CHOOSE PLAN</button>
+                    </div>
+                </article>
+                <article class="plan">
+                    <h1 class="plan__title">PREMIUM</h1>
+                    <h2 class="plan__price">$99/month</h2>
+                    <h3>For ambitious projects.</h3>
+                    <ul class="plan__features">
+                        <li class="plan__features">10 Workspaces</li>
+                        <li class="plan__features">Unlimited Traffic</li>
+                        <li class="plan__features">Unlimited Storage</li>
+                        <li class="plan__features">Priority Support</li>
+                    </ul>
+                    <div>
+                        <button class="button">CHOOSE PLAN</button>
+                    </div>
+                </article>
+            </div>
         </section>
-
     </main>
 </body>
 
