--- a/packages/index.html
+++ b/packages/index.html
@@ -9,107 +9,54 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="shared.css">
+    <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="packages.css">
 </head>
 
 <body>
     <header class="main-header">
         <div>
-            <a href="index.html" class="main-header__brand">
+            <a href="../index.html" class="main-header__brand">
                 uHost
             </a>
         </div>
         <nav class="main-nav">
             <ul class="main-nav__items">
                 <li class="main-nav__item">
-                    <a href="packages/index.html">Packages</a>
+                    <a href="index.html">Packages</a>
                 </li>
                 <li class="main-nav__item">
-                    <a href="customers/index.html">Customers</a>
+                    <a href="../customers/index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="start-hosting/index.html">Start Hosting</a>
+                    <a href="../start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="product-overview">
-            <h1>Get the freedom you deserve.</h1>
+        <section class="package">
+            <a href="#">
+                <h1>Our PLUS Plan </h1>
+                <h2>The most popular choice of our customers </h2>
+                <p>Benefit from increased storage and faster support to ensure
+                    that your missions are always available!</p>
+            </a>
         </section>
-        <section id="plans">
-            <h1 class="section-title">Choose your plan.</h1>
-            <div>
-                <article class="plan">
-                    <h1 class="plan__title">FREE</h1>
-                    <h2 class="plan__price">$0/month</h2>
-                    <h3>For ambitious projects.</h3>
-                    <ul class="plan__features">
-                        <li class="plan__features">1 Workspace</li>
-                        <li class="plan__features">Unlimited Traffic</li>
-                        <li class="plan__features">10GB Storage</li>
-                        <li class="plan__features">Basic Support</li>
-                    </ul>
-                    <div>
-                        <button class="button">CHOOSE PLAN</button>
-                    </div>
-                </article>
-                <article class="plan plan--highlighted">
-                    <h1 class="plan__annotation">RECOMMENDED</h1>
-                    <h1 class="plan__title">PLUS</h1>
-                    <h2 class="plan__price">$29/month</h2>
-                    <h3>For ambitious projects.</h3>
-                    <ul class="plan__features">
-                        <li class="plan__features">5 Workspaces</li>
-                        <li class="plan__features">Unlimited Traffic</li>
-                        <li class="plan__features">100GB Storage</li>
-                        <li class="plan__features">Plus Support</li>
-                    </ul>
-                    <div>
-                        <button class="button">CHOOSE PLAN</button>
-                    </div>
-                </article>
-                <article class="plan">
-                    <h1 class="plan__title">PREMIUM</h1>
-                    <h2 class="plan__price">$99/month</h2>
-                    <h3>For ambitious projects.</h3>
-                    <ul class="plan__features">
-                        <li class="plan__features">10 Workspaces</li>
-                        <li class="plan__features">Unlimited Traffic</li>
-                        <li class="plan__features">Unlimited Storage</li>
-                        <li class="plan__features">Priority Support</li>
-                    </ul>
-                    <div>
-                        <button class="button">CHOOSE PLAN</button>
-                    </div>
-                </article>
-            </div>
+        <section class="package">
+            <a href="#">
+                <h1>Our FREE Plan </h1>
+                <h2>An extremely solid start into our hosting world. </h2>
+                <p>Get started immediately at zero cost!</p>
+            </a>
         </section>
-        <section id="key-features">
-            <h1 class="section-title">Many Good Reasons to Stick Around.</h1>
-            <ul class="key-feature__list">
-                <li class="key-feature">
-                    <div class="key-feature__image">
-
-                    </div>
-                    <p class="key-feature__description">3,870,000 Trausting Customers</p>
-                </li>
-                <li class="key-feature">
-                    <div class="key-feature__image">
-
-                    </div>
-                    <p class="key-feature__description">99.999% Uptime Guarantee</p>
-                </li>
-                <li class="key-feature">
-                    <div class="key-feature__image">
-
-                    </div>
-                    <p class="key-feature__description">Lightning Fast CDN</p>
-                </li>
-            </ul>
+        <section class="package">
+            <a href="#">
+                <h1>Our PREMIUM Plan </h1>
+                <h2>All your enterprise needs. Instant Support, guaranteed uptime </h2>
+                <p>The best solution for small to large enterprises. Because hosting shound't be your problem.</p>
+            </a>
         </section>
-
     </main>
     <footer class="main-footer">
         <nav>
