--- a/packages/index.html
+++ b/packages/index.html
@@ -35,26 +35,27 @@
         </nav>
     </header>
     <main>
-        <section class="package">
+        <section class="package" id="plus">
             <a href="#">
-                <h1>Our PLUS Plan </h1>
-                <h2>The most popular choice of our customers </h2>
-                <p>Benefit from increased storage and faster support to ensure
+                <h1 class="package__title">Our PLUS Plan </h1>
+                <h2 class="package__subtitle">The most popular choice of our customers </h2>
+                <p class="package__info">Benefit from increased storage and faster support to ensure
                     that your missions are always available!</p>
             </a>
         </section>
-        <section class="package">
+        <section class="package" id="free">
             <a href="#">
-                <h1>Our FREE Plan </h1>
-                <h2>An extremely solid start into our hosting world. </h2>
-                <p>Get started immediately at zero cost!</p>
+                <h1 class="package__title">Our FREE Plan </h1>
+                <h2 class="package__subtitle">An extremely solid start into our hosting world. </h2>
+                <p class="package__info">Get started immediately at zero cost!</p>
             </a>
         </section>
-        <section class="package">
+        <div class="clearfix"></div>
+        <section class="package" id="premium">
             <a href="#">
-                <h1>Our PREMIUM Plan </h1>
-                <h2>All your enterprise needs. Instant Support, guaranteed uptime </h2>
-                <p>The best solution for small to large enterprises. Because hosting shound't be your problem.</p>
+                <h1 class="package__title">Our PREMIUM Plan </h1>
+                <h2 class="package__subtitle">All your enterprise needs. Instant Support, guaranteed uptime </h2>
+                <p class="package__info">The best solution for small to large enterprises. Because hosting shound't be your problem.</p>
             </a>
         </section>
     </main>
