--- a/customers/index.html
+++ b/customers/index.html
@@ -17,7 +17,7 @@
     <header class="main-header">
         <div>
             <a href="../index.html" class="main-header__brand">
-        <img src="../images/uhost-icon.png" alt="uhost - your fav hosting company">
+                <img src="../images/uhost-icon.png" alt="uHost - Your favorite hosting company">
             </a>
         </div>
         <nav class="main-nav">
@@ -66,11 +66,11 @@
     </main>
     <footer class="main-footer">
         <nav>
-            <ul>
-                <li>
+            <ul class="main-footer__links">
+                <li class="main-footer__link">
                     <a href="#">Support</a>
                 </li>
-                <li>
+                <li class="main-footer__link">
                     <a href="#">Terms of Use</a>
                 </li>
             </ul>
