--- a/customers/index.html
+++ b/customers/index.html
@@ -34,7 +34,7 @@
                     <a href="index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="start-hosting/index.html">Start Hosting</a>
+                    <a href="../start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
@@ -63,7 +63,8 @@
                     <h2 class="testimonial__subtitle">Founder of
                         <a href="tech-analysis.com">tech-analysis.com</a>
                     </h2>
-                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in like no time.</p>
+                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in
+                        like no time.</p>
                 </div>
             </div>
             <div class="testimonial" id="customer-2">
@@ -72,7 +73,8 @@
                     <h1 class="testimonial__name">John Mellow</h1>
                     <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
                     </h2>
-                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and
+                        file storage solution. I found
                         it in uHost!
                     </p>
                 </div>
