--- a/customers/index.html
+++ b/customers/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost Customers</title>
     <link rel="shortcut icon" href="../favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="customers.css">
 </head>
@@ -34,7 +33,7 @@
                     <a href="index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="../start-hosting/index.html">Start Hosting</a>
+                    <a href="start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
@@ -63,8 +62,7 @@
                     <h2 class="testimonial__subtitle">Founder of
                         <a href="tech-analysis.com">tech-analysis.com</a>
                     </h2>
-                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in
-                        like no time.</p>
+                    <p class="testimonial__text">uHost helped me realize my project with a highly constrained budget in like no time.</p>
                 </div>
             </div>
             <div class="testimonial" id="customer-2">
@@ -73,8 +71,7 @@
                     <h1 class="testimonial__name">John Mellow</h1>
                     <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
                     </h2>
-                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and
-                        file storage solution. I found
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
                         it in uHost!
                     </p>
                 </div>
