--- a/packages/start-hosting/index.html
+++ b/packages/start-hosting/index.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>uHost Signup</title>
     <link rel="shortcut icon" href="../favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700" rel="stylesheet">
     <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="start-hosting.css">
 </head>
@@ -72,7 +71,7 @@
             <label for="agree-terms">Agree to
                 <a href="#">Terms &amp; Conditions</a>
             </label>
-            <button type="submit" class="button" disabled>Sign Up</button>
+            <button type="submit" class="button">Sign Up</button>
         </form>
     </main>
     <footer class="main-footer">
