--- a/customers/index.html
+++ b/customers/index.html
@@ -33,7 +33,7 @@
                     <a href="index.html">Customers</a>
                 </li>
                 <li class="main-nav__item main-nav__item--cta">
-                    <a href="start-hosting/index.html">Start Hosting</a>
+                    <a href="../start-hosting/index.html">Start Hosting</a>
                 </li>
             </ul>
         </nav>
@@ -71,8 +71,7 @@
                     <h1 class="testimonial__name">John Mellow</h1>
                     <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
                     </h2>
-                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
-                        it in uHost!
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found it in uHost!
                     </p>
                 </div>
                 <div class="testimonial__image-container">
