--- a/packages/index.html
+++ b/packages/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uHost</title>
     <link rel="shortcut icon" href="../favicon.png">
-   <link rel="stylesheet" href="../shared.css">
+    <link rel="stylesheet" href="../shared.css">
     <link rel="stylesheet" href="packages.css">
 </head>
 
@@ -58,7 +58,8 @@
                 <h1 class="package__title">Our PLUS Plan</h1>
                 <h2 class="package__badge">RECOMMENDED</h2>
                 <h2 class="package__subtitle">The most popular choice of our customers.</h2>
-                <p class="package__info">Benefit from increased storage and faster support to ensure that your mission-critical data and applications
+                <p class="package__info">Benefit from increased storage and faster support to ensure that your
+                    mission-critical data and applications
                     are always available!</p>
             </a>
         </section>
@@ -74,7 +75,8 @@
             <a href="#">
                 <h1 class="package__title">Our PREMIUM Plan</h1>
                 <h2 class="package__subtitle">All your enterprise needs. Instant support, guaranteed uptime. </h2>
-                <p class="package__info">The best solution for small to large enterprises. Because hosting shouldn't be in the way!</p>
+                <p class="package__info">The best solution for small to large enterprises. Because hosting shouldn't be
+                    in the way!</p>
             </a>
         </section>
     </main>
