Add backdrop animation

--- a/customers/index.html
+++ b/customers/index.html
@@ -71,7 +71,8 @@
                     <h1 class="testimonial__name">John Mellow</h1>
                     <h2 class="testimonial__subtitle">Hosts his private videos on uHost.
                     </h2>
-                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found it in uHost!
+                    <p class="testimonial__text">I worked as a blogger and always looked for an integrated hosting and file storage solution. I found
+                        it in uHost!
                     </p>
                 </div>
                 <div class="testimonial__image-container">
